Backend (#14)
* first_code

* authentication API(signUp,login) is completed

* adderess,city,zipcode fields are added

* createInquiry api has implemented

* swagger changes

* whenever inquiry is created we sent mail to admin

* carCategoryes and carBrands is created

* update

* update

* update

* Upto 16 APIES of ADMIN PAGE

* update

* ADMIN APIES ARE DONE

* CEG-1279

* update

* update

* merge conflicts are resolved

* dash board

* update

* updated

* update the code

* upate

---------
